--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>技术支持</title>
 </head>
 <body>
-  <h1>欢迎访问技术支持页面</h1>
+  <h1>欢迎访问 小游戏打砖块 技术支持页面</h1>
   <p>如果您在使用我们的应用时遇到问题，您可以通过以下方式联系我们：</p>
 
   <h2>联系方式</h2>
   <ul>
     <li>电子邮件: <a href="mailto:280387801@qq.com">280387801@qq.com</a></li>
-    <li>电话: 18211191794</li>
   </ul>
 
   
