--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>技术支持</title>
 </head>
 <body>
-  <h1>欢迎访问 小游戏打砖块 技术支持页面</h1>
+  <h1>欢迎访问 技术支持页面</h1>
   <p>如果您在使用我们的应用时遇到问题，您可以通过以下方式联系我们：</p>
 
   <h2>联系方式</h2>
