--- a/private.html
+++ b/private.html
@@ -92,7 +92,7 @@
     
     <h2>9. 联系我们</h2>
     <p>如果您对本隐私政策有任何疑问，请通过以下方式联系我们：</p>
-    <p>邮箱：privacy@videopuzzle.com</p>
+    <p>邮箱：280387801@qq.com</p>
     
     <p style="margin-top: 30px; text-align: center;">最后更新日期：2024年3月</p>
 </body>
