--- a/service.html
+++ b/service.html
@@ -82,7 +82,7 @@
     
     <h2>8. 联系方式</h2>
     <p>如果您对本服务条款有任何疑问，请通过以下方式联系我们：</p>
-    <p>邮箱：support@videopuzzle.com</p>
+    <p>邮箱：280387801@qq.com </p>
     
     <p style="margin-top: 30px; text-align: center;">最后更新日期：2024年3月</p>
 </body>
