--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoPuzzle 服务条款</title>
+    <title> 服务条款</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -38,7 +38,7 @@
     <h1>VideoPuzzle 服务条款</h1>
     
     <h2>1. 服务说明</h2>
-    <p>VideoPuzzle 是一款视频编辑应用，提供视频拼接、转场效果、背景音乐等功能。本服务条款适用于所有使用 VideoPuzzle 的用户。</p>
+    <p>本服务条款适用于所有使用的用户。</p>
     
     <h2>2. 用户权利和义务</h2>
     <ul>
