--- a/service.html
+++ b/service.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>VideoPuzzle 服务条款</h1>
+    <h1> 服务条款</h1>
     
     <h2>1. 服务说明</h2>
     <p>本服务条款适用于所有使用的用户。</p>
