--- a/private.html
+++ b/private.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoPuzzle 隐私政策</title>
+    <title> 隐私政策</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>VideoPuzzle 隐私政策</h1>
+    <h1> 隐私政策</h1>
     
     <h2>1. 信息收集</h2>
     <p>我们收集的信息包括：</p>
